--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@ img {
   min-width: 100%;
   height: auto;
 }
+
+.box.big {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 100px;
+}
+
+.box.red {
+  background-color: teal;
+}
